# Find-films

./: .env  alembic.ini  main.py  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: ae491cfbe803_create_favorite_table_and_other_tables2.py  bb4da90b7cdb_add_owner_id_nullable.py
src/api/routers/: auth_router.py  favorites_router.py  films_router.py  users_router.py
src/config/database/: db_connect.py  init.py
src/core/: security.py
src/domain/models/: FavoriteModel.py  FilmModel.py  UserModel.py  __init__.py
src/infrastructure/models/: FilmModel.py  __init__.py
src/infrastructure/schemas/: schemas.py
src/repositories/: user_repository.py
src/schemas/: favorite_schema.py  film_schema.py  login_schema.py  registration_schema.py  user_schema.py
src/services/: auth_services.py
