[project]
name = "serials"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "authx>=1.4.3",
    "bcrypt>=5.0.0",
    "fastapi>=0.121.1",
    "pydantic[email]>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "spglib>=2.6.0",
    "sqlalchemy>=2.0.44",
    "the-new-hotness>=1.3.0",
    "uvicorn>=0.38.0",
]
